--- a/src/main/webapp/WEB-INF/templates/calc/calculator.html
+++ b/src/main/webapp/WEB-INF/templates/calc/calculator.html
@@ -9,10 +9,11 @@
 
 <form method="post">
     <input type="number" name="number_one" placeholder="0" th:value="${param.number_one}" />
-     +
+    +
     <input type="number" name="number_two" placeholder="0" th:value="${param.number_two}" />
     <input type="submit" value="=" name="equals" />
-    <input type="number" name="number_eq" placeholder="0" th:value="${number_eq}" />
+    <input type="number" name="number_eq" placeholder="0" th:value="${number_eq}" disabled />
 </form>
+
 </body>
 </html>
