--- a/src/main/webapp/WEB-INF/templates/calc/calculator.html
+++ b/src/main/webapp/WEB-INF/templates/calc/calculator.html
@@ -8,11 +8,22 @@
 <h1>Calculator</h1>
 
 <form method="post">
-    <input type="number" name="number_one" placeholder="0" th:value="${param.number_one}" />
-    +
-    <input type="number" name="number_two" placeholder="0" th:value="${param.number_two}" />
-    <input type="submit" value="=" name="equals" />
-    <input type="number" name="number_eq" placeholder="0" th:value="${number_eq}" disabled />
+<!--    <input type="number" name="number_one" placeholder="0" th:value="${param.number_one}" />-->
+<!--    +-->
+<!--    <input type="number" name="number_two" placeholder="0" th:value="${param.number_two}" />-->
+<!--    <input type="submit" value="=" name="equals" />-->
+<!--    <input type="number" name="number_eq" placeholder="0" th:value="${number_eq}" disabled />-->
+    <div th:text="${solution}" style="font-size: 100px">
+        0
+    </div>
+    <br />
+    <input type="number" name="value" placeholder="Number" width="100">
+    <br />
+    <input type="submit" name="add" value="+">
+    <input type="submit" name="subtract" value="-">
+    <input type="submit" name="multiply" value="x">
+    <input type="submit" name="divide" value="/">
+    <input type="submit" name="reset" value="C">
 </form>
 
 </body>
